add: validate required fields